[gd_scene load_steps=2 format=3 uid="uid://dr7gtm78pwglv"]

[ext_resource type="Script" uid="uid://dq8kn7ve3l6ea" path="res://BaseScenes/BaseBuildings/BaseWorldDecor/base_world_decor.gd" id="1_h3kg1"]

[node name="BaseWorldDecor" type="RigidBody3D"]
script = ExtResource("1_h3kg1")

[connection signal="interact" from="." to="." method="_on_interact"]
[connection signal="receive_damage" from="." to="." method="_on_receive_damage"]
[connection signal="state_changed" from="." to="." method="_on_state_changed"]
